@@ -1,5 +1,7 @@
 <?php
 
+use Automattic\Jetpack\Connection\Tokens;
+
 if ( ! class_exists( 'WC_Connect_Nux' ) ) {
 
 	class WC_Connect_Nux {
@@ -228,7 +230,7 @@ if ( ! class_exists( 'WC_Connect_Nux' ) ) {
 				return true;
 			}
 
-			$user_token = Jetpack_Data::get_access_token( JETPACK_MASTER_USER );
+			$user_token = WC_Connect_Jetpack_Adapter::get_master_user_access_token( JETPACK_MASTER_USER );
 			$can_accept = (
 				isset( $user_token->external_user_id ) &&
 				get_current_user_id() === $user_token->external_user_id
@@ -291,7 +293,7 @@ if ( ! class_exists( 'WC_Connect_Nux' ) ) {
 			}
 
 			// check if Jetpack is activated
-			if ( ! class_exists( 'Jetpack_Data' ) ) {
+			if ( ! class_exists( '\Automattic\Jetpack\Connection\Manager' ) && ! class_exists( '\Automattic\Jetpack\Connection\Tokens' ) ) {
 				return self::JETPACK_INSTALLED_NOT_ACTIVATED;
 			}
 
@@ -302,7 +304,7 @@ if ( ! class_exists( 'WC_Connect_Nux' ) ) {
 
 			// installed, activated, dev mode off
 			// check if connected
-			$user_token = Jetpack_Data::get_access_token( JETPACK_MASTER_USER );
+			$user_token = WC_Connect_Jetpack_Adapter::get_master_user_access_token( JETPACK_MASTER_USER );
 			if ( ! isset( $user_token->external_user_id ) ) { // always an int
 				return self::JETPACK_ACTIVATED_NOT_CONNECTED;
 			}
