@@ -1,9 +1,10 @@
 *** WooCommerce Shipping & Tax Changelog ***
 
 = 1.25.8 - 2021-xx-xx =
-* Tweak - Display better errors on checkout page when address fields are missing / invalid.
+* Tweak - Add support for new jetpack data connection.
 
 = 1.25.7 - 2021-02-09 =
+* Tweak - Display better errors on checkout page when address fields are missing / invalid.
 * Fix   - Prevent error notices on checkout page load.
 * Tweak - Highlight rate call usage over limit on WooCommerce Shipping settings page.
 * Fix   - Connect carrier account link broken on subdirectory installs.
